[gd_scene load_steps=3 format=3 uid="uid://ceakmdxjtskru"]

[ext_resource type="Script" uid="uid://bqnk78rt3seff" path="res://addons/gemini_godot/ui/attachment_display.gd" id="1_v20q1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x2m3s"]
bg_color = Color(0.6, 0.6, 0.6, 0.290196)

[node name="PanelContainer" type="PanelContainer"]
offset_right = 35.0
offset_bottom = 75.0
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_x2m3s")
script = ExtResource("1_v20q1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="DeleteButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
size_flags_horizontal = 8
text = "✖️"

[node name="ContentSnippetLabel" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
